--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -1,6 +1,6 @@
 [options]
 admin_passwd = youradminpassword
-addons_path = /mnt/extra-addons/extra-addons,/mnt/extra-addons/your-addons
+addons_path = /mnt/extra-addons/extra-addons,/mnt/extra-addons/your-addons,/mnt/extra-addons/extra-addons/payroll
 data_dir = /var/lib/odoo
 db_host = postgres_14_09
 db_port = 5432
